--- a/sanity-studio/package.json
+++ b/sanity-studio/package.json
@@ -23,9 +23,13 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.2",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/react": "^18.0.25",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.9.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.0.2",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.1.6"
   },
   "prettier": {
