--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.91.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "next-sanity": "^9.12.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sanity": "^3.91.0",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
